--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@ También puedes explorar nuestra sección de clips para contenido destacado. Ún
         <section id="clips">
             <h1>Clips de Videos</h1>
             <video id="myVideo" width="30%" height="240" controls>
-                <source src="./Clips/Clip 1.mp4" type="video/mp4">
+                <source src="./clips/Clip 1.mp4" type="video/mp4">
                 Su navegador no soporta la etiqueta de vídeo.
               </video>
 
               <video id="myVideo" width="30%" height="240" controls>
-                <source src="./Clips/Clip 2.mp4" type="video/mp4">
+                <source src="./clips/Clip 2.mp4" type="video/mp4">
                 Su navegador no soporta la etiqueta de vídeo.
               </video>
 
               <video id="myVideo" width="30%" height="240" controls>
-                <source src="./Clips/CLIP 3.mp4" type="video/mp4">
+                <source src="./clips/Clip 3.mp4" type="video/mp4">
                 Su navegador no soporta la etiqueta de vídeo.
               </video>
               
